Iteration 3: The Michael Bay

--- a/recipes/michaelbay.html
+++ b/recipes/michaelbay.html
@@ -2,11 +2,57 @@
 
 <html>
     <head>
-        <title>Michael Bay</title>
+        <title> The Michael Bay</title>
         <meta charset = "UTF-8">
     </head>
 
     <body>
         <h1>Michael Bay</h1>
+        <img src="../images/michaelbaydish.gif" alt="Expolosive Diarrhoea of a Dish">
+        
+        <h2>Description</h2>
+        <p>Low on (cooking) talent? Ever wondered why your fellow chefs try a variety of cuisines? Do you wish to please your company heads who know so much about imagination?</p>
+        <p>We bring you The Michael Bay. Easy on ingredients and high on returns. At least initially. Just follow along and repeat the steps over and over until people catch on.</p>
+        
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Explosions</li>
+            <li>Extremely Jacked Alpha Male</li>
+            <li>Hot models with bewwbs</li>
+            <li>Motive to “Save The World”</li>
+            <li>Secondary comedic character(Preferably a stereotype)</li>
+            <li>Oversaturated Teal and Orange shots</li>
+            <li>Lens Flares</li>
+            <li>Shots of the American Flag</li>
+            <li><a href="https://youtu.be/y--kxT7c9Lo" target="_black">Optional background music</a></li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Beginner chef? Lucky for you this recipe doesn’t need a P*L*OT</li>
+            <li>Would you want to add relatable characters at this point, nah son, add some stone faced ultra straight guys shooting at stuff because who wants to see real life struggles.</li>
+            <li>Allergic to meat head characters substitute the previous with hot garbage CGI Machines for easy appetizing</li>
+            <li>Explosion</li>
+            <li>Running</li>
+            <li>Explosion</li>
+            <li>Punching</li>
+            <li>Explosion</li>
+            <li>Guns</li>
+            <li>EXPLOSIONNN(s)!!!</li>
+            <li>Add a big shot of the American Flag</li>
+            <li>nother “BIG SHOT OF THE AMERICAN FLAG”.. actually add a whole bunch of them</li>
+            <li>Time for a down low spinning around hero shot</li>
+            <li>Your dish is almost ready at this step.</li>
+            <li>Oh no, your dish is about to be over cooked. You need to do a Sllllooooowwwwmmmmmoooooo dive to the gas knob before the whole nation.. erm.. dish.. self destructs</li>
+            <li>Garnish with this those oversaturated tones</li>
+            <li>You can serve this dish about five times before your guests realize you’ve been serving the same dish over and over again.</li>
+        </ol>
+
+        <h4>Refernces</h4>
+        <ul>
+            <li><a href = "https://www.reddit.com/user/Camsy34/" target="_blank">Recipe picture</a></li>
+            <li><a href = "https://youtu.be/CCSwZ9dQZHI" target="_blank">Refernce video 1</a></li>
+            <li><a href = "https://youtu.be/CcS5DkHwKJk" target="_blank">Refernce video 2</a></li>
+        </ul>
     </body>
 </html>
