Iteration 4: Add More Recipes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/michaelbay.html"> The Michael Bay</a>
+        <ul>
+            <li><a href="recipes/michaelbay.html"> The Michael Bay</a></li>
+            <li><a href="recipes/quentintarantino.html"> The Quentin Tarantino</a></li>
+            <li><a href="recipes/karanjohar.html"> The Karan Johar</a></li>
+        </ul>
     </body>
 </html>
