--- a/recipes/michaelbay.html
+++ b/recipes/michaelbay.html
@@ -31,7 +31,7 @@
         <ol>
             <li>Beginner chef? Lucky for you this recipe doesn’t need a P*L*OT</li>
             <li>Would you want to add relatable characters at this point, nah son, add some stone faced ultra straight guys shooting at stuff because who wants to see real life struggles.</li>
-            <li>Allergic to meat head characters substitute the previous with hot garbage CGI Machines for easy appetizing</li>
+            <li>Allergic to meat head characters substitute the previous with hot garbage CGI Machines</li>
             <li>Explosion</li>
             <li>Running</li>
             <li>Explosion</li>
@@ -40,7 +40,7 @@
             <li>Guns</li>
             <li>EXPLOSIONNN(s)!!!</li>
             <li>Add a big shot of the American Flag</li>
-            <li>nother “BIG SHOT OF THE AMERICAN FLAG”.. actually add a whole bunch of them</li>
+            <li>Another “BIG SHOT OF THE AMERICAN FLAG”.. actually add a whole bunch of them</li>
             <li>Time for a down low spinning around hero shot</li>
             <li>Your dish is almost ready at this step.</li>
             <li>Oh no, your dish is about to be over cooked. You need to do a Sllllooooowwwwmmmmmoooooo dive to the gas knob before the whole nation.. erm.. dish.. self destructs</li>
@@ -54,5 +54,8 @@
             <li><a href = "https://youtu.be/CCSwZ9dQZHI" target="_blank">Refernce video 1</a></li>
             <li><a href = "https://youtu.be/CcS5DkHwKJk" target="_blank">Refernce video 2</a></li>
         </ul>
+
+        <p><a href="../index.html">Return to Homepage</a></p>
+
     </body>
 </html>
